--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Saisreekar Gottipati - Aspiring Data Analyst">
+    <meta name="description" content="Portfolio of Saisreekar Gottipati -  Data Analyst">
     <title>Saisreekar Gottipati | Data Analyst Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Saisreekar Gottipati</h1>
-        <p>Aspiring Data Analyst | SQL | Python | Tableau | Power BI</p>
+        <p>Aspiring Data Analyst | SQL | Python | Tableau | Power BI | Advanced excel </p>
     </header>
 
     <nav>
